# tg-ml-contest-r2

./: .gitignore  LICENSE  README.md
libtglang-r2/: CMakeLists.txt  tglang.cpp
libtglang-r2/resources/: languages.txt
py-code/: create_code_dataset.py  create_text_dataset.py  detect_telegram_languages.py  download_code_dataset.py  evaluate_language_model.py  evaluate_text_model.py  languages.json  misc.py  ml2023_languages.json  requirements.txt
